--- a/res/layout/local_service_item.xml
+++ b/res/layout/local_service_item.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@android:id/text1"
 	android:layout_width="fill_parent"
@@ -6,5 +7,4 @@
 	android:gravity="center_vertical"
 	android:paddingLeft="6dip"
 	android:minHeight="?android:attr/listPreferredItemHeight"
-	android:maxLines="3"
 />
