--- a/res/layout/editable_stringlist_item.xml
+++ b/res/layout/editable_stringlist_item.xml
@@ -6,21 +6,22 @@
 	android:paddingLeft="2dip"
 	android:orientation="horizontal"
 >
-	<EditText
+	<AutoCompleteTextView
 		android:id="@+id/editable_stringlist_text"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:layout_weight="1"
 		android:singleLine="true"
+		android:completionThreshold="1"
+		android:imeOptions="actionDone"
 	/>
-	<Button
+	<ImageButton
 		android:id="@+id/editable_stringlist_deletebutton"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:singleLine="true"
 		android:layout_weight="3"
 		android:layout_marginLeft="10dp"
 		android:layout_marginRight="10dp"
-		android:text="-"
+		android:src="@android:drawable/ic_delete"
 	/>
 </LinearLayout>
