--- a/res/layout/editable_stringlist.xml
+++ b/res/layout/editable_stringlist.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
-	android:orientation="vertical"
 >
+	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:orientation="vertical"
+		android:id="@+id/editable_stringlist_bottom"
+		android:layout_alignParentBottom="true"
+	>
+		<ImageButton
+			android:id="@+id/editable_stringlist_addbutton"
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent"
+			android:layout_marginLeft="20dp"
+			android:layout_marginRight="20dp"
+			android:src="@android:drawable/ic_input_add"
+		/>
+		<include layout="@layout/ok_cancel_buttons" android:id="@+id/editable_stringlist_buttons" />
+	</LinearLayout>
 	<ListView
 		android:id="@android:id/list"
 		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:isScrollContainer="true"
+		android:layout_height="fill_parent"
+		android:layout_above="@id/editable_stringlist_bottom"
 	/>
-</LinearLayout>
-
+</RelativeLayout>
