--- a/res/layout/editable_stringlist_spinneritem.xml
+++ b/res/layout/editable_stringlist_spinneritem.xml
@@ -1,28 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent"
-	android:layout_height="wrap_content"
-	android:minHeight="?android:attr/listPreferredItemHeight"
-	android:paddingLeft="2dip"
-	android:orientation="horizontal"
->
-	<Spinner
-		android:id="@+id/editable_stringlist_spinner"
-		android:layout_width="fill_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:minHeight="?android:attr/listPreferredItemHeight"
+    android:orientation="horizontal" >
+
+	<EditText
+	    android:id="@+id/editable_spinner_text"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_marginLeft="10dp"
+	    android:layout_marginRight="0dp"
+	    android:layout_weight="1"
+	    android:imeOptions="actionDone"
+	    android:singleLine="true" />
+
+	<ImageButton
+		android:id="@+id/editable_spinner_button"
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_weight="1"
-		android:singleLine="true"
-		android:layout_marginLeft="10dp"
-		android:layout_marginRight="5dp"
-		android:paddingTop="1dp"
-		android:paddingBottom="1dp"
+		android:layout_marginLeft="0dp"
+		android:layout_marginRight="10dp"
+		android:paddingTop="0dp"
+		android:paddingBottom="0dp"
+		android:paddingRight="0dp"
+		android:paddingLeft="0dp"
+		android:src="@+drawable/dropdown"
 	/>
 	<ImageButton
 		android:id="@+id/editable_stringlist_deletebutton"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:layout_weight="3"
-		android:layout_marginLeft="5dp"
+		android:layout_weight="2"
+		android:layout_marginLeft="0dp"
 		android:layout_marginRight="10dp"
 		android:src="@+drawable/ic_delete"
 	/>
