--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,3 +1,8 @@
 <resources>
-  <style name="FBReader.Dialog" parent="android:Theme.Dialog"/>
+  <style name="FBReader.Activity" parent="android:Theme">
+		<item name="android:configChanges">orientation|keyboardHidden</item>
+	</style>
+  <style name="FBReader.Dialog" parent="android:Theme.Dialog">
+		<item name="android:configChanges">orientation|keyboardHidden</item>
+	</style>
 </resources>
